@@ -1,3 +1,7 @@
+2002-08-26  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-mmix/b-nosym.d: Adjust for "no symbols" on stdout.
+
 2002-08-23  Stephen Clarke <stephen.clarke@superh.com>
 
 	* ld-sh/sh64/rd-sh64.exp: New framework file.
